--- a/co.edu.uniquindio.seguimientoI/pom.xml
+++ b/co.edu.uniquindio.seguimientoI/pom.xml
@@ -7,11 +7,17 @@
     <groupId>co.edu.uniquindio.seguimientoI</groupId>
     <artifactId>co.edu.uniquindio.seguimientoI</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+        </dependency>
+    </dependencies>
 
 </project>
